fix: add nginx proxy for /exchange and /weather, disable initData validation for testing